[package]
name = "liberdus-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
console-subscriber = "0.4.1"
futures-util = "0.3.17"
poem = { version = "3.1.3", features = ["websocket"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version =  "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sodiumoxide = "0.2.7"
tokio = { version = "1.16.1", features = ["full"] }

[build]
rustflags = ["--cfg", "tokio_unstable"]
